# AutoBC

./: .general.output3.swp  .gitignore  CMakeLists.txt  Dockerfile  README.md  README.md.bak  analyze.py  experiment.output  experiment.sh  log.md  method.tex  nohup.out  one_case.sh  one_case_cont.sh  one_experiment.sh  output.txt  pure.txt  pure2.txt  run.sh  sort_bc.sh  tmp
Lasso-BC/: get_terms.py  input.txt  output.txt
Lasso-BC/achievepattern/: achievepattern.txt  generalBC.txt
Lasso-BC/amba/: amba.txt
Lasso-BC/amba02_new/: amba02_new.txt
Lasso-BC/amba03_new/: amba03_new.txt
Lasso-BC/amba04_new/: amba04_new.txt
Lasso-BC/amba05_new/: amba05_new.txt
Lasso-BC/atm/: atm.txt  generalBC.txt
Lasso-BC/elevator/: elevator.txt  generalBC.txt
Lasso-BC/genbuf01/: genbuf01.txt
Lasso-BC/genbuf02/: genbuf02.txt
Lasso-BC/genbuf03/: genbuf03.txt
Lasso-BC/genbuf04/: genbuf04.txt
Lasso-BC/genbuf05/: genbuf05.txt
Lasso-BC/las/: generalBC.txt  las.txt
Lasso-BC/liftcontroller/: generalBC.txt  liftcontroller.txt
Lasso-BC/loadbalancer/: loadbalancer.txt
Lasso-BC/minepump/: generalBC.txt  minepump.txt
Lasso-BC/prioritized_arbiter/: generalBC.txt  prioritized_arbiter.txt
Lasso-BC/retractionpattern1/: generalBC.txt  retractionpattern1.txt
Lasso-BC/retractionpattern2/: generalBC.txt  retractionpattern2.txt
Lasso-BC/roundrobin/: generalBC.txt  roundrobin.txt
Lasso-BC/rrcs/: generalBC.txt  rrcs.txt
Lasso-BC/simple_arbiter/: generalBC.txt  simple_arbiter.txt
Lasso-BC/tcp/: generalBC.txt  tcp.txt
Lasso-BC/telephone/: generalBC.txt  telephone.txt
experiment1.3.output/: achievepattern.output  atm.output  elevator.output  las.output  liftcontroller.output  loadbalancer.output  minepump.output  prioritized_arbiter.contrasty10.txt.output  prioritized_arbiter.contrasty11.txt.output  prioritized_arbiter.contrasty12.txt.output  prioritized_arbiter.contrasty13.txt.output  prioritized_arbiter.contrasty14.txt.output  prioritized_arbiter.contrasty15.txt.output  prioritized_arbiter.contrasty16.txt.output  prioritized_arbiter.contrasty17.txt.output  prioritized_arbiter.contrasty18.txt.output  prioritized_arbiter.contrasty19.txt.output  prioritized_arbiter.output  retractionpattern1.output  retractionpattern2.output  roundrobin.output  rrcs.output  simple_arbiter.output  tcp.output  telephone.output
include/: dict.hpp  error.hpp  literal.hpp  ltl.hpp  operator.hpp  rnd.hpp  sat.hpp  solver.hpp
include/autobc/: autobc.hpp  autobc_error.hpp  fix_solver.hpp  lasso.hpp  random_solver.hpp  ranking.hpp  util.hpp
include/ltl/: dict.hpp  error.hpp  ltl.hpp  model_counter.hpp  operator.hpp  sat.hpp
include/param/: file_reader.hpp  param.hpp  param_error.hpp
include/rander/: rnd.hpp
ltl/: Makefile
ltl/src/: literal.cpp  ltl.cpp
output1.3/achievepattern/: contrasty10.txt  contrasty11.txt  contrasty12.txt  contrasty13.txt  contrasty14.txt  contrasty15.txt  contrasty16.txt  contrasty17.txt  contrasty18.txt  contrasty19.txt
output1.3/atm/: contrasty10.txt  contrasty13.txt  contrasty14.txt  contrasty19.txt
output1.3/elevator/: contrasty11.txt  contrasty17.txt  contrasty18.txt  contrasty19.txt
output1.3/las/: contrasty10.txt  contrasty11.txt  contrasty12.txt  contrasty13.txt  contrasty14.txt  contrasty15.txt  contrasty16.txt  (+3 more)
outputs/: minepump.random.txt  outputs.5
src/: dict.cpp  literal.cpp  ltl.cpp  ltlin2post.cpp  main.cpp  operator.cpp  rander.cpp  rnd.cpp  sat.cpp  solver.cpp  test.cpp
(+1903 files in other folders)
